--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,16 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
-    color: #343a40;
+    background-color: #F5F5F5;
+    /* Un color de fondo vainilla */
+    color: #333;
 }
 
 header {
-    background-color: #343a40;
-    color: white;
+    background-color: #e8e8e8;
+    /* Un color de fondo beige para el encabezado */
+    color: #333;
+    /* Un color de texto oscuro para contraste */
     padding: 20px;
     text-align: center;
 }
@@ -18,14 +21,18 @@ main {
 }
 
 footer {
-    background-color: #343a40;
-    color: white;
+    background-color: #e8e8e8;
+    /* Un color de fondo beige para el pie de página */
+    color: #333;
+    /* Un color de texto oscuro para contraste */
     text-align: center;
-    padding: 10px;
+    padding: 20px;
     position: fixed;
     bottom: 0;
     width: 100%;
 }
+
+/* Resto del código... */
 
 .countdown {
     font-size: 2em;
